--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-component-tester-istanbul",
-  "version": "0.10.1",
+  "version": "0.10.2",
   "description": "Instanbul coverage reporting for projects being tested by web-component-tester",
   "main": "lib/plugin.js",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/thedeeno/web-component-tester-istanbul",
   "dependencies": {
+    "express": "^4.16.2",
     "html-script-hook": "^0.10.0",
     "istanbul": "^0.4.0",
     "istanbul-threshold-checker": "^0.1.0",
