--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   "dependencies": {
     "express": "^4.16.2",
     "html-script-hook": "^0.10.0",
-    "istanbul": "^0.4.0",
+    "istanbul": "^1.0.0-alpha.2",
     "istanbul-threshold-checker": "^0.1.0",
     "lodash": "^4.0.0",
     "minimatch": "^3.0.0",
-    "parseurl": "^1.3.0"
+    "parseurl": "^1.3.0",
+    "esprima": "4.0.0"
   },
   "wct-plugin": {
     "cli-options": {
