--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web-component-tester-istanbul",
-  "version": "0.10.2",
+  "name": "wct-istanbub",
+  "version": "0.0.1",
   "description": "Instanbul coverage reporting for projects being tested by web-component-tester",
   "main": "lib/plugin.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thedeeno/web-component-tester-istanbul.git"
+    "url": "https://github.com/Bubbit/wct-istanbub.git"
   },
   "keywords": [
     "web-component-tester",
@@ -19,9 +19,9 @@
   "author": "Dane O'Connor",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/thedeeno/web-component-tester-istanbul/issues"
+    "url": "https://github.com/Bubbit/wct-istanbub/issues"
   },
-  "homepage": "https://github.com/thedeeno/web-component-tester-istanbul",
+  "homepage": "https://github.com/Bubbit/wct-istanbub",
   "dependencies": {
     "express": "^4.16.2",
     "html-script-hook": "^0.10.0",
