--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "istanbul-threshold-checker": "^0.1.0",
     "lodash": "^4.0.0",
     "minimatch": "^3.0.0",
-    "parseurl": "^1.3.0",
-    "esprima": "4.0.0"
+    "parseurl": "^1.3.0"
   },
   "wct-plugin": {
     "cli-options": {
