--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "html-script-hook": "^0.10.0",
-    "istanbul": "^0.4.0",
+    "istanbul": "git+https://github.com/Bubbit/istanbul.git#master",
     "istanbul-threshold-checker": "^0.1.0",
     "lodash": "^4.0.0",
     "minimatch": "^3.0.0",
