--- a/package.json
+++ b/package.json
@@ -23,11 +23,19 @@
   },
   "homepage": "https://github.com/Bubbit/wct-istanbub",
   "dependencies": {
+    "convert-source-map": "^1.5.1",
     "express": "^4.16.2",
     "html-script-hook": "^0.10.0",
     "istanbub": "^0.4.6",
+    "istanbul-lib-coverage": "^1.2.0",
+    "istanbul-lib-hook": "^1.1.0",
+    "istanbul-lib-instrument": "^1.10.1",
+    "istanbul-lib-report": "^1.1.3",
+    "istanbul-lib-source-maps": "^1.2.3",
+    "istanbul-reports": "^1.3.0",
     "istanbul-threshold-checker": "^0.1.0",
     "lodash": "^4.0.0",
+    "merge-source-map": "^1.1.0",
     "minimatch": "^3.0.0",
     "parseurl": "^1.3.0"
   },
