--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wct-istanbub",
   "version": "0.1.2",
-  "description": "Instanbul coverage reporting for projects being tested by web-component-tester",
+  "description": "Instanbuljs coverage reporting for projects being tested by web-component-tester",
   "main": "lib/plugin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,7 +12,7 @@
   },
   "keywords": [
     "web-component-tester",
-    "istanbul",
+    "istanbuljs",
     "coverage",
     "wct"
   ],
@@ -26,7 +26,7 @@
     "convert-source-map": "^1.5.1",
     "express": "^4.16.2",
     "html-script-hook": "^0.10.0",
-    "istanbub": "^0.4.6",
+    "istanbul-api": "^1.3.1",
     "istanbul-lib-coverage": "^1.2.0",
     "istanbul-lib-hook": "^1.1.0",
     "istanbul-lib-instrument": "^1.10.1",
