--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wct-istanbub",
-  "version": "0.2.0-pre.4",
+  "version": "0.2.0",
   "description": "Instanbuljs coverage reporting for projects being tested by web-component-tester",
   "main": "lib/plugin.js",
   "scripts": {
@@ -43,7 +43,8 @@
     "minimatch": "^3.0.0",
     "parseurl": "^1.3.0",
     "polymer-build": "^3.0.1",
-    "polyserve": "^0.27.11"
+    "polyserve": "^0.27.11",
+    "web-component-tester": "^6.6.0"
   },
   "wct-plugin": {
     "cli-options": {
