--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wct-istanbub",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "Instanbuljs coverage reporting for projects being tested by web-component-tester",
   "main": "lib/plugin.js",
   "scripts": {
@@ -23,6 +23,9 @@
     },
     {
       "name": "Jimi van der Woning"
+    },
+    {
+      "name": "Westbrook Johnson"
     }
   ],
   "license": "ISC",
